Added SRT decoding options
